# simplesok_vita

./: CMakeLists.txt  test_level.xbs  todo.txt
font/: .directory
